기타 : 주석 및 줄 수정